# grayscale-project

./: Cargo.toml  README.md  build_wasm_cargo.sh  image_processor.wasm  image_processor_wasm.h  wasm_image_processor.h
host/: CMakeLists.txt  main.c
src/: lib.rs  main.rs
test-image/: test.hex  test_256.hex
